<resources>
    <string name="app_name">Template</string>
    <string name="onboarding_title_1">Welcome to the onboarding template app!</string>
    <string name="onboarding_title_2">You can also swipe backwards and forwards!</string>
    <string name="onboarding_title_3">Don\'t forget to add images!</string>
    <string name="onboarding_title_4">You can also change the amount of pages!</string>

    <string name="onboarding_body_1">Here you can write a lot of lorem ipsum and whatever else you want to introduce the application to the user.</string>
    <string name="onboarding_body_2">Here you can write EVEN MORE lorem ipsum and whatever else you want to introduce the application to the user (also check out the skip button).</string>
    <string name="onboarding_body_3">Here you can write EXCEEDING AMOUNTS of lorem ipsum and whatever else you want to introduce the application to the user.</string>
    <string name="onboarding_body_4">Here you can write ALL OF THE of lorem ipsum and whatever else you want to introduce the application to the user.</string>

    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_continue">Continue</string>
    <string name="home_title">And we\'re done!</string>
    <string name="home_body">Feel free to use the source code of this application wherever you see fit.</string>
    <string name="onboarding_back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_confirm">Confirm</string>
    <string name="log_in_confirm">Confirm</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Create an account</string>
    <string name="user_not_found">User not found</string>
    <string name="user_error">User error</string>
    <string name="user_found">User %s found</string>
    <string name="sign_in_google_null">Result is null</string>
    <string name="sign_in_google_cancelled">Sign in cancelled</string>
    <string name="sign_in_google_failed">Google sign in failed</string>
    <string name="title_email">Username or Email</string>
    <string name="title_password">Password</string>
    <string name="title_confirm_password">Confirm password</string>
    <string name="onboarding_completed_nav_alert">Can\'t navigate back from here!</string>
    <string name="welcome_pre_sign_in">Welcome to the Pre-Sign in screen!</string>
    <string name="welcome_pre_sign_in_body">Here you can log in via Google, create an account, or just sign in. Make sure to add your app credentials in Google Cloud! Signing in via Google skips log in and sign up.</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sign_in_body">Enter your Proton Account details.</string>
    <string name="user_creation_title">Enter your user identifier</string>
    <string name="user_creation_body">You can change whether the user is prompted for an email or an username via navigation graph parameters.</string>
    <string name="password_creation_title">Create your password</string>
    <string name="password_creation_body">You can change whether a password confirmation is needed via navigation graph parameters.</string>'
    <string name="password_creation_hint">Password must contain at least 8 characters</string>
    <string name="title_username">Username</string>
    <string name="welcome_proton">ProtonMail</string>
    <string name="welcome_proton_sign_in_body">Privacy. Security. Convinience. Encrypted email that gives you full control of your personal data.</string>
    <string name="need_help">Need help?</string>
    <string name="next">Next</string>
    <string name="proton">Proton</string>
    <string name="create_proton_title">Create your Proton Account</string>
    <string name="create_proton_body">One account for all Proton services.</string>
    <string name="proton_privacy">Privacy by default</string>

</resources>