<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnboardingPageFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="@dimen/size_120"
        android:layout_height="@dimen/size_120"
        android:layout_marginTop="@dimen/size_200"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/Text.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_36"
        android:layout_marginEnd="@dimen/size_36"
        android:text="@string/welcome_pre_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/body"
        style="@style/Text.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_36"
        android:layout_marginTop="@dimen/size_36"
        android:layout_marginEnd="@dimen/size_36"
        android:text="@string/welcome_pre_sign_in_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_google_button"
        style="@style/Button.Google"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginEnd="@dimen/size_24"
        android:layout_marginBottom="@dimen/size_24"
        android:drawableStart="@drawable/common_google_signin_btn_icon_light"
        android:text="@string/sign_in_google"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        style="@style/Button.Navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginEnd="@dimen/size_24"
        android:layout_marginBottom="@dimen/size_24"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        style="@style/Button.Navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginEnd="@dimen/size_24"
        android:layout_marginBottom="@dimen/size_24"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>