<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/proton_gray_purp"
    tools:context=".ui.onboarding.OnboardingPageFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="@dimen/size_120"
        android:layout_height="@dimen/size_120"
        android:layout_marginTop="@dimen/size_48"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/Text.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_36"
        android:layout_marginTop="@dimen/size_36"
        android:layout_marginEnd="@dimen/size_36"
        android:text="@string/create_proton_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/body"
        style="@style/Text.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_36"
        android:layout_marginTop="@dimen/size_12"
        android:layout_marginEnd="@dimen/size_36"
        android:text="@string/create_proton_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/identifier_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_email"
        app:layout_constraintBottom_toTopOf="@id/input_layout_identifier"
        app:layout_constraintStart_toStartOf="@id/input_layout_identifier" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_identifier"
        style="@style/OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginTop="@dimen/size_48"
        android:layout_marginEnd="@dimen/size_24"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_identifier"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:imeOptions="actionDone"
            android:inputType="text|textEmailAddress"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_button"
        style="@style/Button.Navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginEnd="@dimen/size_24"
        android:layout_marginBottom="@dimen/size_24"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_identifier" />

</androidx.constraintlayout.widget.ConstraintLayout>