<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/proton_gray_purp"
    tools:context=".ui.onboarding.OnboardingPageFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/Text.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginTop="@dimen/size_36"
        android:layout_marginEnd="@dimen/size_36"
        android:text="@string/password_creation_title"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_password"
        app:layout_constraintBottom_toTopOf="@id/input_layout_password"
        app:layout_constraintStart_toStartOf="@id/input_layout_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        style="@style/OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginTop="@dimen/size_48"
        android:layout_marginEnd="@dimen/size_24"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16"
            android:layout_marginTop="-20dp"
            android:text="@string/password_creation_hint"
            android:textColor="@color/dark_grayish_lite"
            android:textSize="@dimen/text_13"
            app:layout_constraintStart_toStartOf="@id/input_layout_password"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:lines="1"
            android:nextFocusForward="@id/edit_text_password_confirm"
            app:endIconMode="password_toggle" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_confirm_password"
        app:layout_constraintBottom_toTopOf="@id/input_layout_password_confirm"
        app:layout_constraintStart_toStartOf="@id/input_layout_password_confirm" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password_confirm"
        style="@style/OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginTop="@dimen/size_36"
        android:layout_marginEnd="@dimen/size_24"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password_confirm"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/grayish" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_button"
        style="@style/Button.Navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginTop="@dimen/size_12"
        android:layout_marginEnd="@dimen/size_24"
        android:layout_marginBottom="@dimen/size_24"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password_confirm" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>